# wart-var

./: .travis.yml  HLint.hs  LICENSE  README.markdown  README.md  Setup.lhs  wart-var.cabal
src/Control/Monad/: New.hs  Read.hs  Var.hs  Write.hs
src/Data/Var/: Boxed.hs  Unboxed.hs
tests/: doctests.hsc  hlint.hs
travis/: cabal-apt-install
