name:          wart-var
category:      wart-var
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Andy Sonnenburg
maintainer:    Andy Sonnenburg <andy22286@gmail.com>
stability:     experimental
homepage:      http://github.com/sonyandy/wart-var/
bug-reports:   http://github.com/sonyandy/wart-var/issues
copyright:     Copyright (C) 2013 Andy Sonnenburg
synopsis:      wart-var
description:   wart-var
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/sonyanyd/wart-var.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.4 && < 5,
    transformers
  exposed-modules:
    Control.Monad.New
    Control.Monad.Read
    Control.Monad.Var
    Control.Monad.Write

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  default-language: Haskell2010
  build-depends:
    base,
    hlint >= 1.7
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if impl(ghc < 7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc < 7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
